# osoconn

./: .gitignore  LICENSE  README.md  aSections_mm.json  common.php  connections.json  connections.php  doc_HB001.php  doc_MC001.php  doc_SC001.php  doc_VB001.php  doc_connection_reference.php  doc_cookies.php  doc_license.php  doc_osoconn_cla.php  doc_osoconn_web_app.php  documentation.php  download.php  hb001.php  index.php  mc001.php  output_file.cou  pdo.php  sc001.php  shearConnection1.cin  vb001.php  wSections_in.json
cla/: q  CMakeLists.txt  main.cpp
cla/connections/: HB001AM10.h  MC001AM10.h  SC001AM10.h  VB001AM10.h  connection.h
cla/data/: AISCSections.db
cla/examples/HB001/HB001AM10/: HB001_1.cin  HB001_1.cou  HB001_2.cin  HB001_2.cou  HB001_3.cin  HB001_3.cou  HB001_4.cin  HB001_4.cou  HB001_5.cin  HB001_5.cou  HB001_6.cin  HB001_6.cou
cla/examples/MC001/MC001AM10/: MC001_1.cin  MC001_1.cou  MC001_2.cin  MC001_2.cou  MC001_3.cin  MC001_3.cou  MC001_4.cin  MC001_4.cou  MC001_5.cin  MC001_5.cou  MC001_6.cin  MC001_6.cou
cla/examples/SC001/SC001AM10/: SC001_1.cin  SC001_1.cou  SC001_2.cin  SC001_2.cou  SC001_3.cin  SC001_3.cou  SC001_4.cin  SC001_4.cou  SC001_5.cin  SC001_5.cou  SC001_6.cin  SC001_6.cou
cla/examples/VB001/VB001AM10/: VB001_1.cin  VB001_1.cou  VB001_2.cin  VB001_2.cou  VB001_3.cin  VB001_3.cou  (+6 more)
cla/examples/string_input/: conn.min  shearConnection.cin
cla/include/: bolt.h  common.h  error.h  osoconnConfig.h  osoconnConfig.h.in  parameter.h  section_property.h  unit_system.h  utilities.h  weld.h
cla/sqlite3/: CMakeLists.txt
(+81 files in other folders)
